css to make background fixed on mobile

--- a/stylesheets/space.css
+++ b/stylesheets/space.css
@@ -7,6 +7,7 @@
    width: 90%;
    margin: 0 auto;
    background: url('../images/pattern.png') repeat center center fixed;
+   background-attachment:fixed;
 
   }
   .img-fluid {
